@@ -3002,6 +3002,7 @@ class LMS
 	function GetRemoteMACs($host = '127.0.0.1', $port = 1029)
 	{
 		$inputbuf = '';
+		$result = array();
 		
 		if($socket = socket_create (AF_INET, SOCK_STREAM, 0))
 			if(@socket_connect ($socket, $host, $port))
@@ -3023,19 +3024,21 @@ class LMS
 					$result['nodename'][] = $this->GetNodeNameByMAC($hwaddr);
 				}
 			}
-			return $result;
 		}
+
+		return $result;
 	}
 
 	function GetMACs()
 	{
+		$result = array();
 		switch(PHP_OS)
 		{
 			case 'Linux':
 				if(@is_readable('/proc/net/arp'))
 					$file = fopen('/proc/net/arp','r');
 				else
-					return FALSE;
+					break;
 				while(!feof($file))
 				{
 					$line = fgets($file, 4096);
