@@ -36,6 +36,7 @@ version ? (????-??-??):
     access right (alec)
   - fixed problem when option allow_from is set but is empty (alec)
   - boolean options can contains 'enabled' and 'disabled' values (alec)
+  - fix: GetMACs() and GetRemoteMACs() returns array (alec)
 
 version 1.11.0 Thoth (2007-08-17):
 
